--- a/src/view/pages/index.ejs
+++ b/src/view/pages/index.ejs
@@ -1,4 +1,14 @@
 <div id="body">
+
+<div class="star-field">
+  <div class="layer"></div>
+  <div class="layer"></div>
+  <div class="layer"></div>
+  <div class="layer"></div>
+  <div class="layer"></div>
+  <div class="layer"></div>
+</div>
+
 	<div class="bg">
 	</div>
 	<section class="banner-contents">
@@ -26,8 +36,7 @@
 						<img src="<%= require('../../img/index/scene-log1.png') %>" alt="">
 					</div>
 					<h2 class="title">可公信安全的数据存储</h2>
-					<p class="intro">
-数据开发共享是推动数据产业发展的源动力，是未来世界的石油和源动力，现在将数据存在单方私有的数据中心，需求方获取并分析的模型已被证实存在较大弊端，也缺乏交易透明性，数据的所有权和控制权无法得到保证。我们的最终理念是，通过可被公证和公信得Lambda，以不同QoS存储可公开验证和匿名验证的各类数据，推动数据的共享共有，最终做到共同获益。</p>
+					<p class="intro">数据开发共享是推动数据产业发展的源动力，是未来世界的石油和源动力，现在将数据存在单方私有的数据中心，需求方获取并分析的模型已被证实存在较大弊端，也缺乏交易透明性，数据的所有权和控制权无法得到保证。我们的最终理念是，通过可被公证和公信得Lambda，以不同QoS存储可公开验证和匿名验证的各类数据，推动数据的共享共有，最终做到共同获益。</p>
 				</div>
 				<div class="scene-item col-lg-w-30 col-lg-offset-w-10 col-md-4 col-sm-6 col-xs-12">
 					<div class="imglogo-wrapper">
