--- a/src/view/pages/index.ejs
+++ b/src/view/pages/index.ejs
@@ -1,16 +1,5 @@
 <div id="body">
-
-<div class="star-field">
-  <div class="layer"></div>
-  <div class="layer"></div>
-  <div class="layer"></div>
-  <div class="layer"></div>
-  <div class="layer"></div>
-  <div class="layer"></div>
-</div>
-
-	<div class="bg">
-	</div>
+	<div class="bg"></div>
 	<section class="banner-contents">
 		<div class="container">
 			<div class="col-md-6 col-xs-12">
@@ -363,143 +352,143 @@
 				</div>
 			</div> -->
 			<div class="row" style="position:relative">
-	<div class="col-md-offset-1 col-md-11 box-wrapper">
-		<div class="row">
-			<div class="col-sm-2 col-xxs-2">
-				<div class="nc-wrapper">
-					<span class="left-num color-show">1</span>
-					<div class="circle-icon ">
-						<div class="column-line "></div>
-						<i></i>
-					</div>
-				</div>
-			</div>
-			<div class="p-l-0 col-sm-10 col-xxs-10">
-				<div class="year-list">
-					<span class="num">2017 Q4</span>
-					<h2 class="title">Lambda 技术论证与研究</h2>
-					<ul>
-	 					<li>深度研究区各公链和基础协议技术框架，核心团队阅读大量的代码和论文</li>
-						<li>论证 Permissionless 环境下的海量数据的计算和存储模型</li>
-						<li>论证 OAS 商业模式和 Token 经济的结合点</li>
-					</ul>
-				</div>
-			</div>
-		</div>
-		<div class="row">
-			<div class="col-sm-2 col-xxs-2">
-				<div class="nc-wrapper">
-					<span class="left-num color-show">2</span>
-					<div class="circle-icon">
-						<i></i>
-					</div>
-				</div>
-			</div>
-			<div class="p-l-0 col-sm-10 col-xxs-10">
-				<div class="year-list">
-					<span class="num">2018 Q1</span>
-					<h2 class="title">Lambda 技术论证与研究</h2>
-					<ul>
-						<li>选择合适的区块链共识机制，确定了采用Sharding 方案的高速链设计，以及子链的HoneyBadgerBFT 共识算法</li>
-						<li>确定采用 Request 和 Reponse 分别记账的多子链设计</li>
-						<li>完善链库结构分离的结构设计</li>
-						<li>确定采用 PDP 的数据持有性证明和 ABE 的访问控制和加密机制</li>
-						<li>确定技术路线和技术方案</li>
-						<li>完成技术白皮书</li>
-					</ul>
-				</div>
-			</div>
-		</div>
-		<div class="row">
-			<div class="col-sm-2 col-xxs-2">
-				<div class="nc-wrapper">
-					<span class="left-num color-show">3</span>
-					<div class="circle-icon ">
-						<i></i>
-					</div>
-				</div>
-			</div>
-			<div class="p-l-0 col-sm-10 col-xxs-10">
-				<div class="year-list">
-					<span class="num">2018 Q3</span>
-					<h2 class="title">Lambda 核心组件开发</h2>
-					<ul>
-						<li>对 libp2p 和 devp2p 的性能进行评估测试，代码修改</li>
-						<li>实现底层的数据块储系统</li>
-						<li>闭源开发 Lambda Chain 对 Lambda FS 进行技术验证</li>
-						<li>对 Lambda FS 进行社区化开发并实时开源</li>
-						<li>基于 Lambda FS 实现 Lambda 数据库</li>
-						<li>基于热点语言开发 Lambda Agent 方便与现用应用集成</li>
-					</ul>
-				</div>
-			</div>
-		</div>
-		<div class="row">
-			<div class="col-sm-2 col-xxs-2">
-				<div class="nc-wrapper">
-					<span class="left-num color-show">4</span>
-					<div class="circle-icon">
-						<i></i>
-					</div>
-				</div>
-			</div>
-			<div class="p-l-0 col-sm-10 col-xxs-10">
-				<div class="year-list">
-					<span class="num">2018 Q4</span>
-					<h2 class="title">Lambda Chain 测试网络开发</h2>
-					<ul>
-						<li>P2P 网络开发用于同步区块链账本以及存储数据同步</li>
-						<li>虚拟机开发以及内置合约的开发与验证</li>
-						<li>API 接口、RPC 接口、命令行、外围工具开发</li>
-						<li>开源 Lambda Chain</li>
-					</ul>
-				</div>
-			</div>
-		</div>
-		<div class="row">
-			<div class="col-sm-2 col-xxs-2">
-				<div class="nc-wrapper">
-					<span class="left-num color-show">5</span>
-					<div class="circle-icon ">
-						<i></i>
-					</div>
-				</div>
-			</div>
-			<div class="p-l-0 col-sm-10 col-xxs-10">
-				<div class="year-list">
-					<span class="num">2019 Q1</span>
-					<h2 class="title">测试网络搭建与基于 Lambda 范例开发</h2>
-					<ul>
-						<li>基于社区搭建大规模的测试网络，进行全方位的测试</li>
-						<li>发放 LDA 鼓励早期社区爱好者开发基于 Lambda 的应用示例</li>
-						<li>API 接口、RPC 接口、命令行、外围工具开发</li>
-						<li>基于测试网络对应用示例进行安全性与业务漏洞悬赏测试并修正</li>
-					</ul>
-				</div>
-			</div>
-		</div>
-		<div class="row">
-			<div class="col-sm-2 col-xxs-2">
-				<div class="nc-wrapper">
-					<span class="left-num color-show">6</span>
-					<div class="circle-icon">
-						<i></i>
-					</div>
-				</div>
-			</div>
-			<div class="p-l-0 col-sm-10 col-xxs-10">
-				<div class="year-list">
-					<span class="num">2019 Q2</span>
-					<h2 class="title">其他数据服务能力的扩展与数据交易</h2>
-					<ul>
-						<li>由基金会发起鼓励更多的数据存储和数据库类服务能力接入 Lambda 生态环境</li>
-						<li>探索 Lambda 生态内的数据交易商业场景和模式</li>
-					</ul>
-				</div>
-			</div>
-		</div>
-	</div>
-</div>
+      	<div class="col-md-offset-1 col-md-11 box-wrapper">
+      		<div class="row">
+      			<div class="col-sm-2 col-xxs-2">
+      				<div class="nc-wrapper">
+      					<span class="left-num color-show">1</span>
+      					<div class="circle-icon ">
+      						<div class="column-line "></div>
+      						<i></i>
+      					</div>
+      				</div>
+      			</div>
+      			<div class="p-l-0 col-sm-10 col-xxs-10">
+      				<div class="year-list">
+      					<span class="num">2017 Q4</span>
+      					<h2 class="title">Lambda 技术论证与研究</h2>
+      					<ul>
+      	 					<li>深度研究区各公链和基础协议技术框架，核心团队阅读大量的代码和论文</li>
+      						<li>论证 Permissionless 环境下的海量数据的计算和存储模型</li>
+      						<li>论证 OAS 商业模式和 Token 经济的结合点</li>
+      					</ul>
+      				</div>
+      			</div>
+      		</div>
+      		<div class="row">
+      			<div class="col-sm-2 col-xxs-2">
+      				<div class="nc-wrapper">
+      					<span class="left-num color-show">2</span>
+      					<div class="circle-icon">
+      						<i></i>
+      					</div>
+      				</div>
+      			</div>
+      			<div class="p-l-0 col-sm-10 col-xxs-10">
+      				<div class="year-list">
+      					<span class="num">2018 Q1</span>
+      					<h2 class="title">Lambda 技术论证与研究</h2>
+      					<ul>
+      						<li>选择合适的区块链共识机制，确定了采用Sharding 方案的高速链设计，以及子链的HoneyBadgerBFT 共识算法</li>
+      						<li>确定采用 Request 和 Reponse 分别记账的多子链设计</li>
+      						<li>完善链库结构分离的结构设计</li>
+      						<li>确定采用 PDP 的数据持有性证明和 ABE 的访问控制和加密机制</li>
+      						<li>确定技术路线和技术方案</li>
+      						<li>完成技术白皮书</li>
+      					</ul>
+      				</div>
+      			</div>
+      		</div>
+      		<div class="row">
+      			<div class="col-sm-2 col-xxs-2">
+      				<div class="nc-wrapper">
+      					<span class="left-num color-show">3</span>
+      					<div class="circle-icon ">
+      						<i></i>
+      					</div>
+      				</div>
+      			</div>
+      			<div class="p-l-0 col-sm-10 col-xxs-10">
+      				<div class="year-list">
+      					<span class="num">2018 Q3</span>
+      					<h2 class="title">Lambda 核心组件开发</h2>
+      					<ul>
+      						<li>对 libp2p 和 devp2p 的性能进行评估测试，代码修改</li>
+      						<li>实现底层的数据块储系统</li>
+      						<li>闭源开发 Lambda Chain 对 Lambda FS 进行技术验证</li>
+      						<li>对 Lambda FS 进行社区化开发并实时开源</li>
+      						<li>基于 Lambda FS 实现 Lambda 数据库</li>
+      						<li>基于热点语言开发 Lambda Agent 方便与现用应用集成</li>
+      					</ul>
+      				</div>
+      			</div>
+      		</div>
+      		<div class="row">
+      			<div class="col-sm-2 col-xxs-2">
+      				<div class="nc-wrapper">
+      					<span class="left-num color-show">4</span>
+      					<div class="circle-icon">
+      						<i></i>
+      					</div>
+      				</div>
+      			</div>
+      			<div class="p-l-0 col-sm-10 col-xxs-10">
+      				<div class="year-list">
+      					<span class="num">2018 Q4</span>
+      					<h2 class="title">Lambda Chain 测试网络开发</h2>
+      					<ul>
+      						<li>P2P 网络开发用于同步区块链账本以及存储数据同步</li>
+      						<li>虚拟机开发以及内置合约的开发与验证</li>
+      						<li>API 接口、RPC 接口、命令行、外围工具开发</li>
+      						<li>开源 Lambda Chain</li>
+      					</ul>
+      				</div>
+      			</div>
+      		</div>
+      		<div class="row">
+      			<div class="col-sm-2 col-xxs-2">
+      				<div class="nc-wrapper">
+      					<span class="left-num color-show">5</span>
+      					<div class="circle-icon ">
+      						<i></i>
+      					</div>
+      				</div>
+      			</div>
+      			<div class="p-l-0 col-sm-10 col-xxs-10">
+      				<div class="year-list">
+      					<span class="num">2019 Q1</span>
+      					<h2 class="title">测试网络搭建与基于 Lambda 范例开发</h2>
+      					<ul>
+      						<li>基于社区搭建大规模的测试网络，进行全方位的测试</li>
+      						<li>发放 LAMB 鼓励早期社区爱好者开发基于 Lambda 的应用示例</li>
+      						<li>API 接口、RPC 接口、命令行、外围工具开发</li>
+      						<li>基于测试网络对应用示例进行安全性与业务漏洞悬赏测试并修正</li>
+      					</ul>
+      				</div>
+      			</div>
+      		</div>
+      		<div class="row">
+      			<div class="col-sm-2 col-xxs-2">
+      				<div class="nc-wrapper">
+      					<span class="left-num color-show">6</span>
+      					<div class="circle-icon">
+      						<i></i>
+      					</div>
+      				</div>
+      			</div>
+      			<div class="p-l-0 col-sm-10 col-xxs-10">
+      				<div class="year-list">
+      					<span class="num">2019 Q2</span>
+      					<h2 class="title">其他数据服务能力的扩展与数据交易</h2>
+      					<ul>
+      						<li>由基金会发起鼓励更多的数据存储和数据库类服务能力接入 Lambda 生态环境</li>
+      						<li>探索 Lambda 生态内的数据交易商业场景和模式</li>
+      					</ul>
+      				</div>
+      			</div>
+      		</div>
+      	</div>
+      </div>
 		</div>
 	</section>
 	<section id="team" class="use team">
@@ -598,11 +587,11 @@
 		<h1>合作伙伴</h1>
 		<span>PARTNERS</span>
 		<div class="row partners-wrapper">
-			<div class="partners768  col-sm-4 col-sm-offset-0 col-xs-8 col-xs-offset-2 col-xxs-offset-1 col-xxs-10 ">
+			<!-- <div class="partners768  col-sm-4 col-sm-offset-0 col-xs-8 col-xs-offset-2 col-xxs-offset-1 col-xxs-10 ">
 				<div class="partners-logo">
 					<img src="<%= require('../../img/index/apache.png') %>" alt="">
 				</div>
-			</div>
+			</div> -->
 			<div class="partners768  col-sm-4 col-sm-offset-0 col-xs-8 col-xs-offset-2 col-xxs-offset-1 col-xxs-10 ">
 				<div class="partners-logo">
 					<img src="<%= require('../../img/index/oneapm.png') %>" alt="">
@@ -616,3 +605,9 @@
 		</div>
 	</div>
 </section>
+<div class="star-field">
+  <div class="layer"></div>
+  <div class="layer"></div>
+  <div class="layer"></div>
+</div>
+</div>
