--- a/src/css/page/index.less
+++ b/src/css/page/index.less
@@ -739,17 +739,17 @@ section.partners{
 }
 
 
-// @keyframes sf-fly-by-1 {
-//   from {
-//     transform: translateZ(0px);
-//     opacity: 0.85;
-//   }
-//   to {
-//     transform: translateZ(600px);
-//     opacity: 1.1333333333;
-//   }
-// }
 @keyframes sf-fly-by-1 {
+  from {
+    transform: translateZ(0px);
+				opacity: .5;
+  }
+  to {
+    transform: translateZ(600px);
+				opacity: .5;
+  }
+}
+@keyframes sf-fly-by-2 {
   from {
     transform: translateZ(-600px);
 		opacity: .5;
@@ -759,7 +759,7 @@ section.partners{
 				opacity: .5;
   }
 }
-@keyframes sf-fly-by-2 {
+@keyframes sf-fly-by-3 {
   from {
     transform: translateZ(-1200px);
 				opacity: .5;
@@ -769,7 +769,7 @@ section.partners{
 				opacity: .5;
   }
 }
-@keyframes sf-fly-by-3 {
+@keyframes sf-fly-by-4 {
   from {
     transform: translateZ(-1800px);
 				opacity: .5;
@@ -779,26 +779,26 @@ section.partners{
 				opacity: .5;
   }
 }
-// @keyframes sf-fly-by-5 {
-//   from {
-//     transform: translateZ(-2400px);
-//     opacity: 0.25;
-//   }
-//   to {
-//     transform: translateZ(-1800px);
-//     opacity: 0.3333333333;
-//   }
-// }
-// @keyframes sf-fly-by-6 {
-//   from {
-//     transform: translateZ(-3000px);
-//     opacity: 0.1;
-//   }
-//   to {
-//     transform: translateZ(-2400px);
-//     opacity: 0.1333333333;
-//   }
-// }
+@keyframes sf-fly-by-5 {
+  from {
+    transform: translateZ(-2400px);
+				opacity: .5;
+  }
+  to {
+    transform: translateZ(-1800px);
+  				opacity: .5;
+  }
+}
+@keyframes sf-fly-by-6 {
+  from {
+    transform: translateZ(-3000px);
+    				opacity: .5;
+  }
+  to {
+    transform: translateZ(-2400px);
+  				opacity: .5;
+  }
+}
 .star-field {
 	position: fixed;
 	top: 0;
