--- a/src/view/pages/index.ejs
+++ b/src/view/pages/index.ejs
@@ -609,5 +609,8 @@
   <div class="layer"></div>
   <div class="layer"></div>
   <div class="layer"></div>
+  <div class="layer"></div>
+  <div class="layer"></div>
+  <div class="layer"></div>
 </div>
 </div>
