增加英文版&导航菜单

--- a/src/css/common/header.less
+++ b/src/css/common/header.less
@@ -32,7 +32,7 @@ header{
   		margin-left: 45px;
 			margin-top: 19px;
   		.nav-item{
-  			padding: 10px 26px;
+  			padding: 16px 26px;
   			border-top: 3px solid;
   			border-color: transparent;
   			a{
@@ -304,13 +304,22 @@ header{
   }
 }
 
-
+@media (max-width: 992px) {
+	header{
+		.nav{
+			.navbar{
+				margin-left: 0px;
+			}
+		}
+	}
+}
 @media(max-width: 767px){
   header{
     .navbar-toggle-btn{
       display: block;
     }
     .nav{
+			height: 75px;
       .navbar{
         display: none;
       }
