--- a/src/view/pages/index.ejs
+++ b/src/view/pages/index.ejs
@@ -507,9 +507,17 @@
 				<div class="col-md-2 col-xxs-4 col-xxs-offset-0 col-md-offset-half col-lg-offset-half">
 					<div class="head">
 						<div class="head-wrapper">
-							<img src="<%= require('../../img/index/ghq.png') %>" alt="">
+							<img src="<%= require('../../img/index/lmn.png') %>" alt="">
 						</div>
-						<p class="name">郭宏强</p>
+						<p class="name">李沫南</p>
+					</div>
+				</div>
+				<div class="col-md-2 col-xxs-4 col-xxs-offset-0 col-md-offset-half col-lg-offset-half">
+					<div class="head">
+						<div class="head-wrapper">
+							<img src="<%= require('../../img/index/alex.png') %>" alt="">
+						</div>
+						<p class="name">Alex Lototskiy</p>
 					</div>
 				</div>
 				<div class="col-md-2 col-xxs-4 col-xxs-offset-0 col-md-offset-half col-lg-offset-half">
@@ -523,17 +531,33 @@
 				<div class="col-md-2 col-xxs-4 col-xxs-offset-0 col-md-offset-half col-lg-offset-half">
 					<div class="head">
 						<div class="head-wrapper">
-							<img src="<%= require('../../img/index/yh.png') %>" alt="">
+							<img src="<%= require('../../img/index/ghq.png') %>" alt="">
 						</div>
-						<p class="name">Yue Huang</p>
+						<p class="name">郭宏强</p>
+					</div>
+				</div>
+				<div class="col-md-2 col-xxs-4">
+					<div class="head">
+						<div class="head-wrapper">
+							<img src="<%= require('../../img/index/gaohq.png') %>" alt="">
+						</div>
+						<p class="name">高海强</p>
 					</div>
 				</div>
 				<div class="col-md-2 col-xxs-4 col-xxs-offset-0 col-md-offset-half col-lg-offset-half">
 					<div class="head">
 						<div class="head-wrapper">
-							<img src="<%= require('../../img/index/alex.png') %>" alt="">
+							<img src="<%= require('../../img/index/Oleg.png') %>" alt="">
 						</div>
-						<p class="name">Alex Lototskiy</p>
+						<p class="name">Oleg Lyamtsev</p>
+					</div>
+				</div>
+				<div class="col-md-2 col-xxs-4 col-xxs-offset-0 col-md-offset-half col-lg-offset-half">
+					<div class="head">
+						<div class="head-wrapper">
+							<img src="<%= require('../../img/index/zhj.png') %>" alt="">
+						</div>
+						<p class="name">赵海俊</p>
 					</div>
 				</div>
 			</div>
@@ -542,9 +566,9 @@
 				<div class="col-md-2 col-xxs-4  ">
 					<div class="head">
 						<div class="head-wrapper">
-							<img src="<%= require('../../img/index/jn.png') %>" alt="">
+							<img src="<%= require('../../img/index/tj.png') %>" alt="">
 						</div>
-						<p class="name">BMAN</p>
+						<p class="name">田甲</p>
 					</div>
 				</div>
 				<div class="col-md-2 col-xxs-4 col-xxs-offset-0  col-md-offset-half col-lg-offset-half">
@@ -566,17 +590,25 @@
 				<div class="col-md-2 col-xxs-4 col-xxs-offset-0  col-md-offset-half col-lg-offset-half">
 					<div class="head">
 						<div class="head-wrapper">
-							<img src="<%= require('../../img/index/tj.png') %>" alt="">
+							<img src="<%= require('../../img/index/wt.png') %>" alt="">
 						</div>
-						<p class="name">田甲</p>
+						<p class="name">王涛</p>
 					</div>
 				</div>
 				<div class="col-md-2 col-xxs-4 col-xxs-offset-0  col-md-offset-half col-lg-offset-half">
 					<div class="head">
 						<div class="head-wrapper">
-							<img src="<%= require('../../img/index/gx.png') %>" alt="">
+							<img src="<%= require('../../img/index/cy.png') %>" alt="">
 						</div>
-						<p class="name">顾旋</p>
+						<p class="name">程远</p>
+					</div>
+				</div>
+				<div class="col-md-2 col-xxs-4  ">
+					<div class="head">
+						<div class="head-wrapper">
+							<img src="<%= require('../../img/index/BM.png') %>" alt="">
+						</div>
+						<p class="name">BMAN Lee</p>
 					</div>
 				</div>
 			</div>
