--- a/src/css/page/indexEn.less
+++ b/src/css/page/indexEn.less
@@ -7,6 +7,30 @@
 html,body{
 
 }
+header{
+	.nav{
+		.navbar{
+			.nav-item{
+				padding: 18px 10px;
+				a{
+					font-size: 14px;
+				}
+			}
+		}
+	}
+}
+.imglogo-wrapper{
+	height: 90px;
+	.car{
+		margin-top: 20px;
+	}
+}
+.color-show{
+	color: #3dddd1;
+	background-image: -webkit-gradient(linear, 0 0, right bottom, from(rgba(61, 221, 209, 1)), to(rgba(0, 183, 255, 1)));
+	.background-clip(text);
+	-webkit-text-fill-color: transparent;
+}
 .bg{
 	background: url('../../img/index/universe-bg.jpg') no-repeat;
 background-size: cover;
@@ -15,7 +39,7 @@ width: 100%;
 position: fixed;
 top: 0;
 left: 0;
-z-index: -2;
+z-index: -3;
 &:before{
 	content: '';
 	background: #000;
@@ -26,7 +50,7 @@ z-index: -2;
 	z-index: -1;
 	top: 0;
 	left: 0;
-	opacity: 0.1;
+	opacity: 0.3;
 }
 
 }
@@ -88,6 +112,82 @@ section.banner-contents{
 		.countdown-bottom{
 			font-size: 14px;
 		}
+	}
+}
+
+section.principle{
+	.work-img{
+		width: 130px;
+		height: 90px;
+		float: left;
+		padding: 0 20px;
+	}
+}
+
+
+section.scene{
+	.wrapper{
+		margin-top: 80px;
+	}
+	img{
+		height: 90px;
+	}
+	.car{
+		height: 69px;
+	}
+	h2.title{
+		margin-top: 28px;
+		margin-bottom: 16px;
+		font-size: 24px;
+		font-weight: 400;
+		color: #fff;
+		text-align: left;
+	}
+	p.intro{
+		text-align: left;
+		font-size: 14px;
+		color: rgba(255,255,255,.8);
+	}
+}
+section.design{
+	text-align: left;
+	.jgsj{
+		margin-top: 80px;
+	}
+	.intro-wrapper{
+		position: relative;
+	}
+	.jg-circle{
+		width: 10px;
+		height: 10px;
+		background:linear-gradient(174.6deg,rgba(61,221,209,1),rgba(0,183,255,1));
+		border-radius: 50%;
+		position: absolute;
+		top: 12px;
+	}
+	.row{
+		margin-top: 0px;
+	}
+	img{
+		width: 100%;
+		margin-top: 80px;
+	}
+	p.title{
+		margin-top: 0;
+		font-size: 18px;
+		color: #3dddd1;
+		background-image: -webkit-gradient(linear, 0 0, right bottom, from(rgba(61, 221, 209, 1)), to(rgba(0, 183, 255, 1)));
+		.background-clip(text);
+		-webkit-text-fill-color: transparent;
+		margin-bottom: 0;
+		padding-left: 20px;
+	}
+	p.intro{
+		font-size: 14px;
+		color: rgba(255,255,255,0.8);
+		text-align: left;
+		margin-bottom: 20px;
+		padding-left: 20px;
 	}
 }
 section.use{
@@ -170,9 +270,15 @@ section.use{
 	}
 }
 .tab-contents{
+	div{
+		display: none;
+	}
+	.work-intro{
+		opacity:0.8;
+		padding-left: 145px;
+	}
 	p{
 		font-size: 14px;
-		display: none;
 		min-height: 130px;
 		padding: 0 15px;
 	}
@@ -195,15 +301,16 @@ section.roadmap{
 	.column-line{
 		border: 1px solid rgba(255,255,255,0.2);
 		position: absolute;
-		height: 880px;
-		left: 219px;
-		bottom: 120px;
+		height: 1550px;
+		left: 19px;
+		top: -65px;
+		z-index: -1;
 	}
 	.box-wrapper{
 		margin-top: 40px;
 		padding-top: 60px;
 		.row{
-			margin-bottom: 80px;
+			margin-bottom: 50px;
 		}
 	}
 	.left-num{
@@ -212,6 +319,7 @@ section.roadmap{
 		color:rgba(255,255,255,1);
 	}
 	.circle-icon{
+		position: relative;
 		display: inline-block;
 		border-radius: 50%;
 		border: 1px solid rgba(255,255,255,0.2);
@@ -232,23 +340,34 @@ section.roadmap{
 		justify-content: space-around;
 	}
 	.year-list{
-		display: flex;
 		align-items: flex-start;
 		padding-top: 6px;
 		.year{
 			color: #fff;
 			font-size: 48px;
 		}
+		ul{
+			padding-left: 20px;
+		}
 		li{
-			display: flex;
+			list-style-type: disc;
+			font-size: 14px;
+    	line-height: 1.8;
+    	color: rgba(255,255,255,.8)
 		}
 		.num{
 			font-size: 24px;
-			margin: 0 20px;
-			color:rgba(74,144,226,1);
-			background-image: -webkit-gradient(linear, 0 0, right bottom, from(rgba(61, 221, 209, 1)), to(rgba(0, 183, 255, 1)));
-			.background-clip(text);
-			-webkit-text-fill-color: transparent;
+			margin: 0;
+			color: rgba(255,255,255,0.5);
+			padding-top: 13px;
+			display: inline-block;
+		}
+		h2.title{
+			font-size: 24px;
+			text-align: left;
+			font-weight: 400;
+			margin-top: 3px;
+			margin-bottom: 10px;
 		}
 		.contents{
 			max-width: 660px;
@@ -289,7 +408,7 @@ section.team{
 			}
 		}
 		.name{
-			font-size: 23px;
+			font-size: 20px;
 			color: #3dddd1;
 			background-image: -webkit-gradient(linear, 0 0, right bottom, from(rgba(61, 221, 209, 1)), to(rgba(0, 183, 255, 1)));
 			.background-clip(text);
@@ -323,14 +442,30 @@ section.partners{
 }
 
 @media(min-width: 1200px){
+	.col-lg-w-30{
+		padding: 0 15px;
+		width: 28%;
+		float: left;
+	}
+	.col-lg-offset-w-10{
+		margin-left: 8%
+	}
 	section.hero-image{
 		height: 700px;
+	}
+	.scene-item {
+		min-height: 650px;
 	}
 }
 @media(max-width:1199px){
 	section.banner-contents{
 		padding-top: 80px;
 		padding-bottom: 50px;
+	}
+	section.roadmap {
+		.column-line{
+
+		}
 	}
 	.logo{
 		img{
@@ -340,11 +475,11 @@ section.partners{
 }
 @media(min-width: 992px) and (max-width: 1199px){
 	section.roadmap {
-		.column-line{
-			left: 180px;
-		}
-	}
 
+	}
+	.scene-item {
+		height: 650px;
+	}
 }
 @media (min-width:992px) {
 	.tab-btn{
@@ -354,6 +489,14 @@ section.partners{
 	}
 }
 @media(max-width: 991px){
+	section.roadmap {
+		.column-line{
+
+		}
+	}
+	.scene-item {
+		height: 480px;
+	}
 	section.banner-contents{
 		.btn{
 			margin-top: 20px;
@@ -366,15 +509,55 @@ section.partners{
 	}
 }
 @media(min-width: 768px) and (max-width: 991px){
-	section.roadmap {
-		.column-line{
-			left: 80px;
-			height: 900px;
+	header{
+	.nav{
+		.nav-right{
+			display: none;
 		}
 	}
 }
+	section.roadmap {
 
+	}
+	section.design{
+		.intro-wrapper{
+			min-height: 120px;
+		}
+	}
+}
+@media (min-width: 480px) and (max-width: 768px) {
+	.p-l-0{
+		padding-left: 0;
+	}
+}
 @media(max-width: 767px){
+	.scene-item{
+		height: auto;
+	}
+	section.principle{
+		.tab-contents{
+			margin-top: 30px;
+		}
+		.work-img{
+			float:none;
+			display: block;
+			margin: 0 auto;
+		}
+		.work-intro{
+			padding: 0;
+		}
+	}
+	section.scene{
+		.imglogo-wrapper{
+			height: 60px;
+			.car{
+				margin-top: auto;
+			}
+			img{
+				height: 60px;
+			}
+		}
+	}
 	section.partners{
 	 .partners-wrapper {
 		 margin-top: 50px;
@@ -386,9 +569,37 @@ section.partners{
 		float: none;
 		margin-top: 30px;
 	}
+	section.design{
+		img{
+			margin-bottom: 50px;
+		}
+		.jgsj{
+			margin-top: 0;
+		}
+	}
 	section.roadmap{
+		.column-line{
+			left: 12px;
+		}
+		.left-num{
+			font-size: 50px;
+		}
 		.nc-wrapper{
-			display: none;
+			padding-left: 10px;
+		}
+		.circle-icon{
+			margin-left: 5px;
+			width: 27px;
+			height: 27px;
+			i{
+				width: 15px;
+				height: 15px;
+			}
+		}
+		.year-list{
+			.num{
+				padding-top: 6px;
+			}
 		}
 	}
 	.logo{
@@ -408,12 +619,13 @@ section.partners{
 			}
 		}
 		section.use{
-			padding:50px 0;
+			padding:75px 0;
 			h1{
 				font-size: 36px;
 			}
 			span{
 				font-size: 36px;
+				margin-left: 0;
 			}
 		}
 }
@@ -427,7 +639,17 @@ section.partners{
 		width: 33.33333%;
 		float: left;
 	}
+	section.roadmap{
+		.column-line{
+			height: 2000px;
+		}
+		.box-wrapper{
+			margin-top: 0;
+		}
+	}
 	section.banner-contents{
+		padding-top: 50px;
+		padding-bottom: 0;
 		h1{
 			font-size: 32px;
 		}
@@ -456,29 +678,38 @@ section.partners{
 		}
 	}
 	section.use{
+		padding-top: 70px;
 		span{
 			display: block;
 			margin-left: 5px;
 		}
 		.tab-btn{
 			.item{
+				display: inline-flex;
+				flex-direction: column;
+				text-align: center;
 				width: 23%;
 				height: auto;
 				padding: 0;
+				.btn-icon{
+					margin: 0 auto;
+				}
 				p{
 					font-size: 12px;
 				}
 			}
 		}
 	}
-	section.roadmap {
-		.box-wrapper{
-			margin: 0;
+
+	section.principle{
+		.work-img{
+			width: 110px;
+			height: auto;
 		}
-		.year-list{
-			.year{
-				font-size: 40px;
-			}
+	}
+	.tab-contents{
+		.work-intro{
+			padding-left: 114px;
 		}
 	}
 	section.partners{
@@ -490,6 +721,24 @@ section.partners{
 	}
 }
 @media(max-width:320px){
+	section.partners{
+		.col-xxs-10{
+			float: none;
+		}
+	}
+	section.roadmap{
+		.nc-wrapper{
+			padding-left: 15px;
+		}
+	}
+	.col-xxs-2{
+		width: 16.6666667%;
+		float: left;
+	}
+	.col-xxs-10{
+		width: 83.3333333%;
+		float: left;
+	}
 	.tab-btn{
 		.line{
 			left: 40px;
@@ -508,4 +757,95 @@ section.partners{
 			}
 		}
 	}
+}
+
+
+// @keyframes sf-fly-by-1 {
+//   from {
+//     transform: translateZ(0px);
+//     opacity: 0.85;
+//   }
+//   to {
+//     transform: translateZ(600px);
+//     opacity: 1.1333333333;
+//   }
+// }
+@keyframes sf-fly-by-1 {
+  from {
+    transform: translateZ(-600px);
+		opacity: .5;
+  }
+  to {
+    transform: translateZ(0px);
+				opacity: .5;
+  }
+}
+@keyframes sf-fly-by-2 {
+  from {
+    transform: translateZ(-1200px);
+				opacity: .5;
+  }
+  to {
+    transform: translateZ(-600px);
+				opacity: .5;
+  }
+}
+@keyframes sf-fly-by-3 {
+  from {
+    transform: translateZ(-1800px);
+				opacity: .5;
+  }
+  to {
+    transform: translateZ(-1200px);
+				opacity: .5;
+  }
+}
+// @keyframes sf-fly-by-5 {
+//   from {
+//     transform: translateZ(-2400px);
+//     opacity: 0.25;
+//   }
+//   to {
+//     transform: translateZ(-1800px);
+//     opacity: 0.3333333333;
+//   }
+// }
+// @keyframes sf-fly-by-6 {
+//   from {
+//     transform: translateZ(-3000px);
+//     opacity: 0.1;
+//   }
+//   to {
+//     transform: translateZ(-2400px);
+//     opacity: 0.1333333333;
+//   }
+// }
+.star-field {
+	position: fixed;
+	top: 0;
+	left: 0;
+  width: 100%;
+  height: 100%;
+  perspective: 600px;
+	-webkit-perspective: 600px;
+	z-index: -1;
+}
+.star-field .layer {
+  box-shadow: -411px -476px #cccccc, 777px -407px #d4d4d4, -387px -477px #fcfcfc, -91px -235px #d4d4d4, 491px -460px #f7f7f7, 892px -128px #f7f7f7, 758px -277px #ededed, 596px 378px #cccccc, 647px 423px whitesmoke, 183px 389px #c7c7c7, 524px -237px #f0f0f0, 679px -535px #e3e3e3, 158px 399px #ededed, 157px 249px #ededed, 81px -450px #ebebeb, 719px -360px #c2c2c2, -499px 473px #e8e8e8, -158px -349px #d4d4d4, 870px -134px #cfcfcf, 446px 404px #c2c2c2, 440px 490px #d4d4d4, 414px 507px #e6e6e6, -12px 246px #fcfcfc, -384px 369px #e3e3e3, 641px -413px #fcfcfc, 822px 516px #dbdbdb, 449px 132px #c2c2c2, 727px 146px #f7f7f7, -315px -488px #e6e6e6, 952px -70px #e3e3e3, -869px -29px #dbdbdb, 502px 80px #dedede, 764px 342px #e0e0e0, -150px -380px #dbdbdb, 654px -426px #e3e3e3, -325px -263px #c2c2c2, 755px -447px #c7c7c7, 729px -177px #c2c2c2, -682px -391px #e6e6e6, 554px -176px #ededed, -85px -428px #d9d9d9, 714px 55px #e8e8e8, 359px -285px #cfcfcf, -362px -508px #dedede, 468px -265px #fcfcfc, 74px -500px #c7c7c7, -514px 383px #dbdbdb, 730px -92px #cfcfcf, -112px 287px #c9c9c9, -853px 79px #d6d6d6, 828px 475px #d6d6d6, -681px 13px #fafafa, -176px 209px #f0f0f0, 758px 457px #fafafa, -383px -454px #ededed, 813px 179px #d1d1d1, 608px 98px whitesmoke, -860px -65px #c4c4c4, -572px 272px #f7f7f7, 459px 533px #fcfcfc, 624px -481px #e6e6e6, 790px 477px #dedede, 731px -403px #ededed, 70px -534px #cccccc, -23px 510px #cfcfcf, -652px -237px whitesmoke, -690px 367px #d1d1d1, 810px 536px #d1d1d1, 774px 293px #c9c9c9, -362px 97px #c2c2c2, 563px 47px #dedede, 313px 475px #e0e0e0, 839px -491px #e3e3e3, -217px 377px #d4d4d4, -581px 239px #c2c2c2, -857px 72px #cccccc, -23px 340px #dedede, -837px 246px white, 170px -502px #cfcfcf, 822px -443px #e0e0e0, 795px 497px #e0e0e0, -814px -337px #cfcfcf, 206px -339px #f2f2f2, -779px 108px #e6e6e6, 808px 2px #d4d4d4, 665px 41px #d4d4d4, -564px 64px #cccccc, -380px 74px #cfcfcf, -369px -60px #f7f7f7, 47px -495px #e3e3e3, -383px 368px #f7f7f7, 419px 288px #d1d1d1, -598px -50px #c2c2c2, -833px 187px #c4c4c4, 378px 325px whitesmoke, -703px 375px #d6d6d6, 392px 520px #d9d9d9, -492px -60px #c4c4c4, 759px 288px #ebebeb, 98px -412px #c4c4c4, -911px -277px #c9c9c9;
+  transform-style: preserve-3d;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  height: 4px;
+  width: 4px;
+  border-radius: 2px;
+}
+.star-field .layer:nth-child(1) {
+  animation: sf-fly-by-1 5s linear infinite;
+}
+.star-field .layer:nth-child(2) {
+  animation: sf-fly-by-2 5s linear infinite;
+}
+.star-field .layer:nth-child(3) {
+  animation: sf-fly-by-3 5s linear infinite;
 }
