--- a/src/view/partial/header.ejs
+++ b/src/view/partial/header.ejs
@@ -28,11 +28,64 @@
 							路线图
 						</a>
 					</div>
+					<% } else if(pageId === 'indexEn'){ %>
+						<div class="nav-item mao">
+							<a href="javascript:;" >
+								APPLICATION SCENARIOS
+							</a>
+						</div>
+						<div class="nav-item mao" >
+							<a href="javascript:;">
+								WORKING PRINCIPLE
+							</a>
+						</div>
+						<div class="nav-item mao" >
+							<a href="javascript:;">
+								ECOSYSTEM
+							</a>
+						</div>
+						<div class="nav-item mao" >
+							<a href="javascript:;" >
+								ROADMAP
+							</a>
+						</div>
 					<% } %>
-					<!-- <div class="nav-item" style="float:right">
+					<div class="nav-item" style="float:right">
 						<a href="/en/index.html" style="display: inline-block; width: 30px; height: 20px;"><img style="width: 100%; height:100%" src="<%= require('../../img/public/english@2x.png') %>" alt=""></a>
 						<a href="/index.html" style="display: inline-block; width: 30px; height: 20px;" ><img style="width: 100%; height: 100%" src="<%= require('../../img/public/china@2x.png') %>" alt=""></a>
+					</div>
+				</div>
+				<div class="navbar-toggle-btn">
+					<span class="bar"></span>
+					<span class="bar"></span>
+					<span class="bar"></span>
+				</div>
+				<div class="mobile-navbar">
+					<div class="nav-item active" id="products" style="border-top: 1px solid rgba(255,255,255,.2)">
+						<ul>
+							<li class="mao"><a href="javascript:;">使用场景</a></li>
+							<li class="mao"><a href="javascript:;">工作原理</a></li>
+							<li class="mao"><a href="javascript:;">生态系统</a></li>
+							<li class="mao"><a href="javascript:;">路线图</a></li>
+						</ul>
+					</div>
+					<!-- <div class="nav-item" id="solutions" style="border-bottom: 1px solid rgba(255, 255, 255, 0.2);">
+						<a href="/solutions/feature.html" target="_blank">
+							方案
+						</a>
 					</div> -->
+					<!-- <div class="nav-item" id="case">
+						<a href="/case/feature.html" target="_blank">
+							案例
+						</a>
+					</div> -->
+
+					<div class="nav-item" id="language">
+						<ul>
+							<li><a href="/index.html">中文</a></li>
+							<li><a href="/en/index.html">English</a></li>
+						</ul>
+					</div>
 				</div>
 			</div>
 		</div>
