修改英文版

--- a/src/css/page/index.less
+++ b/src/css/page/index.less
@@ -625,6 +625,9 @@ section.partners{
 		.box-wrapper{
 			margin-top: 0;
 		}
+		.left-num{
+			font-size: 40px;
+		}
 	}
 	section.banner-contents{
 		padding-top: 50px;
