--- a/src/css/page/indexEn.less
+++ b/src/css/page/indexEn.less
@@ -746,7 +746,10 @@ section.partners{
 	}
 	section.banner-contents{
 		h1{
-			font-size: 30px;
+			font-size: 24px;
+		}
+		h2{
+			font-size: 18px;
 		}
 		.crowd{
 			.countdown{
