--- a/src/view/pages/en/index.ejs
+++ b/src/view/pages/en/index.ejs
@@ -3,13 +3,13 @@
 	<section class="banner-contents">
 		<div class="container">
 			<div class="col-md-6 col-xs-12">
-				<h1>提供无限存储能力</h1>
-				<h2>去中心化结构云存储 Lambda</h2>
+				<h1>Provide unlimited storage capabilities</h1>
+				<h2>a decentralized application infrastructure  Lambda</h2>
 				<p style="opacity:0.8;font-size:14px">Lambda is a high-speed, secure and scalable blockchain infrastructure project. Through the logical decoupling and separate implementation of Lambda Chain and Lambda DB, we provide infinitely scalable data storage capabilities to decentralized applications and achieve Multi-chain data cooperative storage, cross-chain data management, data privacy protection, data ownership proof, distributed intelligent computing and other services. Additionally, as the underlying service of blockchain, Lambda Chain provides millions of requests per second (RPS) through Sharding technology, which can grow as the scale of the system expands; and it also offers technology service capabilities for future unlimited expansion through sub-chain technology.</p>
-				<a class="btn" href="https://dn-oneapm.qbox.me/Lambda-WhitePaper.pdf" target="_blank">下载白皮书</a>
+				<a class="btn" href="https://dn-oneapm.qbox.me/Lambda-WhitePaper-en.pdf" target="_blank">Download whitepaper</a>
 			</div>
 			<div class="crowd col-md-6 col-xs-12">
-				<p class="countdown-top">里程碑倒计时</p>
+				<p class="countdown-top">Launch Count Down</p>
 				<div id="getting-started" class="countdown"></div>
 
 			</div>
@@ -45,7 +45,7 @@
 					<div class="imglogo-wrapper">
 					<img src="<%= require('../../../img/index/scene-log4.png') %>" alt="">
 				</div>
-					<h2 class="title">DApp 和区块链</h2>
+					<h2 class="title">DApp and Block chain</h2>
 					<p class="intro">So far, many decentralized application projects face the risk of failing to implement, one of the main causes being the shortage of data storage infrastructures. In fact, the essence of an application, centralized or decentralized, is the implementation of business logic, interface display, and user interaction around data access. Therefore, data infrastructure is the core issue of blockchain and decentralized applications. Currently, blockchain ledgers are not suitable for business data storage, IPFS cannot store formatted program access data. While Lambda project provides infinitely scalable decentralized data collection, storage, and access capabilities through elegant chain library decoupling, isomorphic function subchain design, and publicly verifiable data ownership proofs.</p>
 				</div>
 				<div class="scene-item col-lg-w-30 col-lg-offset-w-10 col-md-4 col-sm-6 col-xs-12">
