--- a/src/css/page/index.less
+++ b/src/css/page/index.less
@@ -830,4 +830,25 @@ section.partners{
 }
 .star-field .layer:nth-child(3) {
   animation: sf-fly-by-3 5s linear infinite;
+
+}
+
+
+
+.btncom {
+	margin-top: 15px;
+  display: inline-block;
+  color: #fff;
+  padding: 9px 32px 11px;
+  background: linear-gradient(174.6deg, #3dddd1, #00b7ff);
+}
+input.input100 {
+	width: 350px;
+  height: 50px;
+  padding: 0 20px 0 23px;
+}
+
+
+#link{
+	display: none;
 }
